force-app/main/default/objects/Control_Requirement__c/Control_Requirement__c.object-meta.xml
<CustomObject>
    <label>Control Requirement</label>
    <nameField>
        <label>Control Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Control Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>