force-app/main/default/objects/Control_Requirement__c/fields/Control__c.field-meta.xml
<CustomField>
    <fullName>Control__c</fullName>
    <label>Control</label>
    <referenceTo>Control__c</referenceTo>
    <relationshipLabel>Control Requirements</relationshipLabel>
    <relationshipName>Control_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>