force-app/main/default/objects/Control_Requirement__c/fields/Control_Codes__c.field-meta.xml
<CustomField>
    <fullName>Control_Codes__c</fullName>
    <label>Control Codes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>