force-app/main/default/objects/Control_Requirement__c/fields/Control_Requirement_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Control_Requirement_Unique_Id__c</fullName>
    <label>Control Requirement Unique Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>