force-app/main/default/objects/Control_Requirement__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Framework</label>
    <referenceTo>Framework__c</referenceTo>
    <relationshipLabel>Control Requirements</relationshipLabel>
    <relationshipName>Control_Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>